@@ -417,57 +417,57 @@ class LibraryFolderProxy(BaseLibraryContainer):
 InitializeClass(LibraryFolderProxy)
 
 
-class DelegatingSpecification(ObjectSpecificationDescriptor):
-    """A __providedBy__ decorator that returns the interfaces provided by
-    the object, plus those of the cached object.
-    """
-
-    def __get__(self, inst, cls=None):
-
-        # We're looking at a class - fall back on default
-        if inst is None:
-            return getObjectSpecification(cls)
-
-        # Find the cached value.
-        cache = getattr(inst, '_v__providedBy__', None)
-
-        # Find the data we need to know if our cache needs to be invalidated
-        provided = alias_provides = getattr(inst, '__provides__', None)
-
-        # See if we have a valid cache, and if so return it
-        if cache is not None:
-            cached_mtime, cached_provides, cached_provided = cache
-
-            if (
-                inst._p_mtime == cached_mtime and
-                alias_provides is cached_provides
-            ):
-                return cached_provided
-
-        # If the instance doesn't have a __provides__ attribute, get the
-        # interfaces implied by the class as a starting point.
-        if provided is None:
-            provided = implementedBy(cls)
-
-        # Add the interfaces provided by the target
-        target = aq_base(inst._target)
-        if target is None:
-            return provided  # don't cache yet!
-
-        # Add the interfaces provided by the target, but take away
-        # IHasAlias if set
-        provided += providedBy(target) - IIterateAware
-
-        if ITranslatable:
-            provided -= ITranslatable
-
-        inst._v__providedBy__ = inst._p_mtime, alias_provides, provided
-        return provided
+# class DelegatingSpecification(ObjectSpecificationDescriptor):
+#     """A __providedBy__ decorator that returns the interfaces provided by
+#     the object, plus those of the cached object.
+#     """
+#
+#     def __get__(self, inst, cls=None):
+#
+#         # We're looking at a class - fall back on default
+#         if inst is None:
+#             return getObjectSpecification(cls)
+#
+#         # Find the cached value.
+#         cache = getattr(inst, '_v__providedBy__', None)
+#
+#         # Find the data we need to know if our cache needs to be invalidated
+#         provided = alias_provides = getattr(inst, '__provides__', None)
+#
+#         # See if we have a valid cache, and if so return it
+#         if cache is not None:
+#             cached_mtime, cached_provides, cached_provided = cache
+#
+#             if (
+#                 inst._p_mtime == cached_mtime and
+#                 alias_provides is cached_provides
+#             ):
+#                 return cached_provided
+#
+#         # If the instance doesn't have a __provides__ attribute, get the
+#         # interfaces implied by the class as a starting point.
+#         if provided is None:
+#             provided = implementedBy(cls)
+#
+#         # Add the interfaces provided by the target
+#         target = aq_base(inst._target)
+#         if target is None:
+#             return provided  # don't cache yet!
+#
+#         # Add the interfaces provided by the target, but take away
+#         # IHasAlias if set
+#         provided += providedBy(target) - IIterateAware
+#
+#         if ITranslatable:
+#             provided -= ITranslatable
+#
+#         inst._v__providedBy__ = inst._p_mtime, alias_provides, provided
+#         return provided
 
 
 class ContentProxy(SimpleItem):
 
-    __providedBy__ = DelegatingSpecification()
+    # __providedBy__ = DelegatingSpecification()
 
     is_content_proxy = True
 
