@@ -49,3 +49,6 @@ Changelog
 
 - #3354799: Use separate search for parent folders.
   [JL 2020-05-29]
+
+- #3366142: Remove DelegatingSpecification.
+  [JL 2020-06-08]
